force-app/main/default/objects/Discount__c/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimum Order Value</fullName>
            </value>
            <value>
                <fullName>Two For One</fullName>
            </value>
            <value>
                <fullName>Volume Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>