force-app/main/default/objects/Discount__c/fields/Custom_Recurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Recurrence_Date__c</fullName>
    <label>Custom Recurrence Date</label>
    <type>Date</type>
</CustomField>