force-app/main/default/objects/Discount__c/fields/Discount_Category__c.field-meta.xml
<CustomField>
    <fullName>Discount_Category__c</fullName>
    <label>Discount Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Time Only</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>