force-app/main/default/objects/Discount__c/fields/Eligible_Families__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Families__c</fullName>
    <label>Eligible Families</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Fiction Book</fullName>
            </value>
            <value>
                <fullName>Nonfiction Book</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>