force-app/main/default/objects/Discount__c/fields/Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Recurrence__c</fullName>
    <label>Recurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>First Day of Month</fullName>
            </value>
            <value>
                <fullName>Every Monday</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Every Friday</fullName>
            </value>
            <value>
                <fullName>First Day of Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>